# RTOS_example

./: CMakeLists.txt  FreeRTOSConfig.h  PdS_project.cpp  PdS_project.h  README.md
ControlTasks/: control.cpp  control.h  sharedStructure.cpp  sharedStructure.h
Interface/: Interface - collegamento.lnk  fault_injection.cpp  interface.cpp  interface.h
Plant_system/: plant.cpp  plant.h
Source/: config.c  queue.c  tasks.c
Source/include/: FreeRTOS.h  config.h  queue.h  task.h
